# Loop

./: .gitmodules  CMakeLists.txt  README.md  input.yaml
AssetBuilder/: CMakeLists.txt
AssetBuilder/src/: main.cpp
LoopEngine/: Application.cpp  Application.hpp  Lifecycle.hpp  VulkanEnums.cpp  VulkanEnums.hpp
LoopEngine/Asset/: AssetSystem.cpp  AssetSystem.hpp
LoopEngine/Camera/: Camera.hpp
LoopEngine/Core/: DisableCopyAndMove.hpp  Singleton.hpp
LoopEngine/Event/: EventHandler.hpp  EventSystem.cpp  EventSystem.hpp
LoopEngine/Graphics/: Context.cpp  Context.hpp  Graphics.cpp  Graphics.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
LoopEngine/Input/: InputSystem.cpp  InputSystem.hpp
LoopEngine/Platform/: Window.cpp  Window.hpp
Plugins/ImGui/: CMakeLists.txt
Plugins/ImGui/src/: ImGuiPlugin.cpp  ImGuiPlugin.hpp
Tools/: CMakeLists.txt
Tools/AssetBuilder/: main.cpp
assets/materials/: particles.yaml
assets/shaders/: particles.frag.spv  particles.vert  particles.vert.spv
examples/ParticleSystem/: CMakeLists.txt
examples/ParticleSystem/assets/: input.yaml
examples/ParticleSystem/assets/materials/: particles.material  particles.yaml
examples/ParticleSystem/assets/shaders/: particles.frag  particles.vert
examples/ParticleSystem/src/: ParticleSystem.cpp  ParticleSystem.hpp  ParticleSystemExample.cpp  ParticleSystemExample.hpp  ParticleSystemPlugin.cpp  ParticleSystemPlugin.hpp
src/LoopEngine/: Application.cpp  Application.hpp  main.cpp
src/LoopEngine/Asset/: AssetSystem.cpp  AssetSystem.hpp
src/LoopEngine/Camera/: Camera.hpp  CameraSystem.cpp  CameraSystem.hpp
src/LoopEngine/Core/: Singleton.hpp
src/LoopEngine/Event/: Delegate.hpp  EventHandler.hpp  EventSystem.cpp  EventSystem.hpp
src/LoopEngine/Graphics/: Context.cpp  Context.hpp  Graphics.cpp  Graphics.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/LoopEngine/Input/: InputController.hpp  InputSystem.cpp  InputSystem.hpp
src/LoopEngine/Platform/: Display.cpp  Display.hpp
src/LoopEngine/Vulkan/: Enums.cpp  Format.cpp  Format.hpp
